# rag_reason

./: .gitignore
CATS_v1/: README.md  run_eval.py
CATS_v1/finalparse/: final_eval_llama_e2e_baseline.jsonl  final_eval_llama_e2e_sft.jsonl  final_eval_llama_oracle_baseline.jsonl  final_eval_llama_oracle_sft.jsonl  final_eval_mistral_e2e_baseline.jsonl  final_eval_mistral_e2e_sft.jsonl  final_eval_mistral_oracle_baseline.jsonl  final_eval_mistral_oracle_sft.jsonl  final_eval_qwen_e2e_baseline.jsonl  final_eval_qwen_e2e_sft.jsonl  final_eval_qwen_oracle_baseline.jsonl  final_eval_qwen_oracle_sft.jsonl
CATS_v1/rag_eval/: _init_.py  auto_ais_loader.py  config.py  conflict_eval.py  llm.py  (+8 more)
CATS_v2/: .env.example  BATCH_PROCESSING_GUIDE.md  CHANGELOG.md  CHANGELOG_v2.0.1.md  CHANGES.md  FIXES.md  FIXES_ROUND2.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  requirements.txt  run_evaluation.py  run_evaluation_batch.py  test_api_keys.py  test_installation.py
dataset_annotation_pipeline_v2/: .env.example  README.md  requirements.txt  run_pipeline.sh
dataset_annotation_pipeline_v3/: .env.example  MULTI_LLM_COMMITTEE_LOGIC.md  README.md  pipeline_v3_analysis.md  requirements.txt  response.txt  run_experiments.sh  run_pipeline.sh
sft_inference_pipeline/: launch_experiments.sh  quick_fix_reports.sh  run_single_family.sh  setup_complete.sh
sft_inference_pipeline_v2/: README.md  run.sh
src/: config.yaml  pyproject.toml
src/data/: input.jsonl
src/llm_pipeline/: client.py  config.py  pipeline.py  retry.py  run.py
src/prompts/: system.j2  user.j2
(+403 files in other folders)
